# Jarvis

./: .gitignore  README.md  package-lock.json  package.json
assets/: reactor.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agents.rs  brain.rs  calendar.rs  claude.rs  db.rs  google_auth.rs  hud.rs  lib.rs  main.rs  mcp.rs  proactive.rs  secrets.rs  stt.rs  todos.rs  tools.rs  tts.rs  vault.rs  work.rs
src-tauri/src/vault_templates/: CLAUDE.md  README.md  business-context.md  connections.md  personal-context.md  skill-audit.md  skill-level-up.md  skill-onboard.md  work-context.md
ui/: index.html  mini.html
ui/css/: jarvis.css
ui/js/: agents.js  app.js  board.js  data.js  hud.js  mindmap.js  settings.js  voice.js  work.js
