[package]
name = "jarvis-desktop"
version = "0.1.1"
description = "JARVIS — voice-driven native desktop assistant"
edition = "2021"

[lib]
name = "jarvis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-autostart = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["windows-native"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time", "sync", "net", "io-util"] }
futures-util = "0.3"
windows = { version = "0.58", features = ["Media_SpeechRecognition", "Foundation", "Foundation_Collections"] }
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = "0.4"

[profile.release]
codegen-units = 1
lto = true
strip = true
